rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_pole_rotation_grib_convention.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["Pole rotation (GRIB convention)",
    METHOD["Pole rotation (GRIB convention)"],
    PARAMETER["Latitude of the southern pole (GRIB convention)",1,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    PARAMETER["Longitude of the southern pole (GRIB convention)",1,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    PARAMETER["Axis rotation (GRIB convention)",1,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]]]
