rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion_pole_rotation_netcdf_cf_convention.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["Pole rotation (netCDF CF convention)",
    METHOD["Pole rotation (netCDF CF convention)"],
    PARAMETER["Grid north pole latitude (netCDF CF convention)",1,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    PARAMETER["Grid north pole longitude (netCDF CF convention)",1,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    PARAMETER["North pole grid longitude (netCDF CF convention)",1,
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]]]
